--- a/roadpin-frontend/app/index.jade
+++ b/roadpin-frontend/app/index.jade
@@ -1,5 +1,5 @@
 !!! 5
-html(lang='en', ng-app="angularBrunchSeedLivescriptBowerApp")
+html(lang='en', ng-app="roadpinFrontendApp")
   head
     meta(charset='utf-8')
     meta(http-equiv="X-UA-Compatible", content="IE=edge,chrome=1")
