--- a/roadpin-frontend/app/styles/themes/custom/_overrides.scss
+++ b/roadpin-frontend/app/styles/themes/custom/_overrides.scss
@@ -14,3 +14,7 @@ body {
   //@include box-shadow(inset 0 0px 15px rgba(0, 0, 0, .5));
 }
 
+.gridStyle {
+    border: 1px solid rgb(212,212,212);
+    height: 300px;
+}
