--- a/roadpin-frontend/app/index.jade
+++ b/roadpin-frontend/app/index.jade
@@ -41,5 +41,15 @@ html(lang='en', ng-app="roadpinFrontendApp")
         p
           small
             a(href='https://github.com/scotch/angular-brunch-seed') angular-brunch-seed | source
-    script(src='/js/vendor.js')
+    script(src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js")
+    //script(src='http://code.angularjs.org/1.2.0-rc.2/angular.min.js')
+    //script(src='http://code.angularjs.org/1.2.0-rc.2/angular-animate.min.js')
+    //script(src='http://code.angularjs.org/1.2.0-rc.2/angular-cookies.min.js')
+    //script(src='http://code.angularjs.org/1.2.0-rc.2/angular-loader.min.js')
+    //script(src='http://code.angularjs.org/1.2.0-rc.2/angular-resource.min.js')
+    //script(src='http://code.angularjs.org/1.2.0-rc.2/angular-route.min.js')
+    //script(src='http://code.angularjs.org/1.2.0-rc.2/angular-sanitize.min.js')
+    //script(src='http://code.angularjs.org/1.2.0-rc.2/angular-touch.min.js')
+    script(src="http://bestiejs.github.io/json3/lib/json3.js")
+    script(src="/js/vendor.js")
     script(src='/js/app.js')
