--- a/roadpin-frontend/app/views/nav.jade
+++ b/roadpin-frontend/app/views/nav.jade
@@ -4,4 +4,4 @@ ul.nav
   li(ng-class="getClass('/view2')")
     a(ng-href='#/view2') view2
   li(ng-class="getClass('/view3')")
-    a(ng-href='#/view3') view3
+    a(ng-href='#/view3') 今天的情形
