--- a/roadpin-frontend/app/styles/_responsive.scss
+++ b/roadpin-frontend/app/styles/_responsive.scss
@@ -18,31 +18,31 @@
 // -------------------------
 // Required since we compile the responsive stuff separately
 
-@import "vendor/styles/bootstrap/variables"; // Modify this for custom colors, font-sizes, etc
-@import "vendor/styles/bootstrap/mixins";
+//@import "vendor/styles/bootstrap/variables"; // Modify this for custom colors, font-sizes, etc
+//@import "vendor/styles/bootstrap/mixins";
 
 
 // RESPONSIVE CLASSES
 // ------------------
 
-@import "vendor/styles/bootstrap/responsive-utilities";
+//@import "vendor/styles/bootstrap/responsive-utilities";
 
 
 // MEDIA QUERIES
 // ------------------
 
 // Large desktops
-@import "vendor/styles/bootstrap/responsive-1200px-min";
+//@import "vendor/styles/bootstrap/responsive-1200px-min";
 
 // Tablets to regular desktops
-@import "vendor/styles/bootstrap/responsive-768px-979px";
+//@import "vendor/styles/bootstrap/responsive-768px-979px";
 
 // Phones to portrait tablets and narrow desktops
-@import "vendor/styles/bootstrap/responsive-767px-max";
+//@import "vendor/styles/bootstrap/responsive-767px-max";
 
 
 // RESPONSIVE NAVBAR
 // ------------------
 
 // From 979px and below, show a button to toggle navbar contents
-@import "vendor/styles/bootstrap/responsive-navbar";
+//@import "vendor/styles/bootstrap/responsive-navbar";
