--- a/roadpin-frontend/app/index.jade
+++ b/roadpin-frontend/app/index.jade
@@ -1,5 +1,5 @@
 !!! 5
-html(lang='en', ng-app="roadpinFrontendApp", ng-controller='AppCtrl')
+html(lang='en', ng-controller='AppCtrl')
   head
     meta(charset='utf-8')
     meta(http-equiv="X-UA-Compatible", content="IE=edge,chrome=1")
@@ -40,7 +40,7 @@ html(lang='en', ng-app="roadpinFrontendApp", ng-controller='AppCtrl')
         p
           small
             a(href='https://github.com/scotch/angular-brunch-seed') angular-brunch-seed | source
-    script(src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js")
+    script(src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js")
     script(src='http://code.angularjs.org/1.2.0-rc.2/angular.min.js')
     script(src='http://code.angularjs.org/1.2.0-rc.2/angular-cookies.min.js')
     script(src='http://code.angularjs.org/1.2.0-rc.2/angular-loader.min.js')
@@ -52,4 +52,7 @@ html(lang='en', ng-app="roadpinFrontendApp", ng-controller='AppCtrl')
     script(src="http://bestiejs.github.io/json3/lib/json3.js")
     script(src="http://cdnjs.cloudflare.com/ajax/libs/ng-grid/2.0.7/ng-grid.min.js")
     script(src="/js/vendor.js")
+    script(src="/js/angular-ui-utils/modules/event/event.js")
+    script(src='/js/angular-ui-map/ui-map.js')
     script(src='/js/app.js')
+    script(src='https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&callback=onGoogleReady')
