1. add jsonToday as service in frontend. 2. add taipei_city_road_case geo data. TODO: 1. add taipei_city_dig_point geo data. 2. put to server. 3. for google map

--- a/roadpin-frontend/app/views/partial4.jade
+++ b/roadpin-frontend/app/views/partial4.jade
@@ -1,2 +1,2 @@
 div(ng-controller="MapCtrl")
-  div.map-canvas(ui-map="myMap", ui-options="mapOptions")
+  div.map-canvas(ui-map="myMap", ui-options="mapOptions", ui-event="{'map-idle' : 'onMapIdle()'}")
