frontend add report

--- a/roadpin-frontend/app/views/nav.jade
+++ b/roadpin-frontend/app/views/nav.jade
@@ -7,3 +7,5 @@ ul.nav
     a(ng-href='#/view3') 今天的情形
   li(ng-class="getClass('/view4')")
     a(ng-href='#/view4') 今天的情形 (Google Map)
+  li(ng-class="getClass('/view5')")
+    a(ng-href='#/view5') Report
