add event on partial5

--- a/roadpin-frontend/app/views/partial5.jade
+++ b/roadpin-frontend/app/views/partial5.jade
@@ -1,5 +1,6 @@
 div(ng-controller='ReportCtrl')
   p {{reportText}}
+  p event: {{geoAccelGyro.event}}
   p lat: {{geoAccelGyro.lat}}
   p lon: {{geoAccelGyro.lon}}
   p yaw: {{geoAccelGyro.yaw}}
