1. ListAll. 2. g_json_all_handler

--- a/roadpin-frontend/app/views/nav.jade
+++ b/roadpin-frontend/app/views/nav.jade
@@ -9,3 +9,5 @@ ul.nav
     a(ng-href='#/view4') 今天的情形 (Google Map)
   li(ng-class="getClass('/view5')")
     a(ng-href='#/view5') Report
+  li(ng-class="getClass('/view7')")
+    a(ng-href='#/view7') 所有的情形
