1. distance marker. 2. update bower.json.ls

--- a/roadpin-frontend/app/styles/themes/custom/_variables.scss
+++ b/roadpin-frontend/app/styles/themes/custom/_variables.scss
@@ -73,7 +73,7 @@ $btnBackground:                     $white;
 $btnBackgroundHighlight:            darken($white, 10%);
 $btnBorder:                         #ccc;
 
-$btnPrimaryBackground:              $linkColor;
+$btnPrimaryBackground:              $yellow;
 //$btnPrimaryBackgroundHighlight:     spin($btnPrimaryBackground, 15%);
 
 $btnInfoBackground:                 #5bc0de;
