--- a/roadpin-frontend/app/index.jade
+++ b/roadpin-frontend/app/index.jade
@@ -7,9 +7,10 @@ html(lang='en', ng-controller='AppCtrl')
     meta(name='description', content='')
     meta(name='author', content='')
     title(ng-bind-template='{{pageTitle}}')
+    link(rel='stylesheet', href='http://cdnjs.cloudflare.com/ajax/libs/ng-grid/2.0.7/ng-grid.min.css')
+    link(rel="stylesheet", href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css")
     link(rel='stylesheet', href='/css/vendor.css')
     link(rel='stylesheet', href='/css/app.css')
-    link(rel='stylesheet', href='http://cdnjs.cloudflare.com/ajax/libs/ng-grid/2.0.7/ng-grid.min.css')
     //if lte IE 7
       script(src='http://cdnjs.cloudflare.com/ajax/libs/json2/20110223/json2.js')
     //if lte IE 8
@@ -41,19 +42,21 @@ html(lang='en', ng-controller='AppCtrl')
         p
           small
             a(href='https://github.com/scotch/angular-brunch-seed') angular-brunch-seed | source
+    script(src='/js/prelude-ls/browser/prelude-browser.js')
     script(src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js")
-    script(src='http://code.angularjs.org/1.2.6/angular.min.js')
-    script(src='http://code.angularjs.org/1.2.6/angular-cookies.min.js')
-    script(src='http://code.angularjs.org/1.2.6/angular-loader.min.js')
-    script(src='http://code.angularjs.org/1.2.6/angular-resource.min.js')
-    script(src='http://code.angularjs.org/1.2.6/angular-route.min.js')
-    script(src='http://code.angularjs.org/1.2.6/angular-sanitize.min.js')
-    script(src='http://code.angularjs.org/1.2.6/angular-animate.min.js')
-    script(src='http://code.angularjs.org/1.2.6/angular-touch.min.js')
+    script(src='http://code.angularjs.org/1.2.10/angular.min.js')
+    script(src='http://code.angularjs.org/1.2.10/angular-cookies.min.js')
+    script(src='http://code.angularjs.org/1.2.10/angular-loader.min.js')
+    script(src='http://code.angularjs.org/1.2.10/angular-resource.min.js')
+    script(src='http://code.angularjs.org/1.2.10/angular-route.min.js')
+    script(src='http://code.angularjs.org/1.2.10/angular-sanitize.min.js')
+    script(src='http://code.angularjs.org/1.2.10/angular-animate.min.js')
+    script(src='http://code.angularjs.org/1.2.10/angular-touch.min.js')
     script(src="http://bestiejs.github.io/json3/lib/json3.js")
     script(src="http://cdnjs.cloudflare.com/ajax/libs/ng-grid/2.0.7/ng-grid.min.js")
     script(src="/js/vendor.js")
-    script(src="/js/angular-ui-utils/modules/event/event.js")
+    script(src="/js/angular-ui-utils/ui-utils.js")
     script(src='/js/angular-ui-map/ui-map.js')
+    script(src='/js/angular-ui-bootstrap-bower/ui-bootstrap-tpls.min.js')
     script(src='/js/app.js')
     script(src='https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&callback=onGoogleReady')
