1. add construction report. 2. default to view4

--- a/roadpin-frontend/app/views/nav.jade
+++ b/roadpin-frontend/app/views/nav.jade
@@ -9,5 +9,7 @@ ul.nav
     a(ng-href='#/view4') 今天的情形 (Google Map)
   li(ng-class="getClass('/view5')")
     a(ng-href='#/view5') Report
+  li(ng-class="getClass('/view6')")
+    a(ng-href='http://cmdweb.pcc.gov.tw/pccms/pwreport/pccducon_geoeng.peo_entry') 施工 Report
   li(ng-class="getClass('/view7')")
     a(ng-href='#/view7') 所有的情形
