--- a/roadpin-frontend/app/views/nav.jade
+++ b/roadpin-frontend/app/views/nav.jade
@@ -10,6 +10,6 @@ ul.nav
   li(ng-class="getClass('/view5')")
     a(ng-href='#/view5') Report
   li(ng-class="getClass('/view6')")
-    a(ng-href='http://cmdweb.pcc.gov.tw/pccms/pwreport/pccducon_geoeng.peo_entry') 施工 Report
+    a(ng-href='http://cmdweb.pcc.gov.tw/pccms/pwreport/pccducon_geoeng.peo_entry') 行政院全民督工
   li(ng-class="getClass('/view7')")
     a(ng-href='#/view7') 所有的情形
