--- a/roadpin-frontend/app/views/nav.jade
+++ b/roadpin-frontend/app/views/nav.jade
@@ -1,8 +1,8 @@
 ul.nav
-  li(ng-class="getClass('/view1')")
-    a(ng-href='#/view1') view1
-  li(ng-class="getClass('/view2')")
-    a(ng-href='#/view2') view2
+  //li(ng-class="getClass('/view1')")
+  //  a(ng-href='#/view1') view1
+  //li(ng-class="getClass('/view2')")
+  //  a(ng-href='#/view2') view2
   li(ng-class="getClass('/view3')")
     a(ng-href='#/view3') 今天的情形
   li(ng-class="getClass('/view4')")
@@ -12,4 +12,4 @@ ul.nav
   li(ng-class="getClass('/view6')")
     a(ng-href='http://cmdweb.pcc.gov.tw/pccms/pwreport/pccducon_geoeng.peo_entry') 行政院全民督工
   li(ng-class="getClass('/view7')")
-    a(ng-href='#/view7') 所有的情形
+    a(ng-href='http://www.safetaiwan.tw/web2/main.php') 公路總局 Safe Taiwan
