--- a/roadpin-frontend/app/views/nav.jade
+++ b/roadpin-frontend/app/views/nav.jade
@@ -10,6 +10,8 @@ ul.nav
   li(ng-class="getClass('/view5')")
     a(ng-href='#/view5') Report
   li(ng-class="getClass('/view6')")
-    a(ng-href='http://cmdweb.pcc.gov.tw/pccms/pwreport/pccducon_geoeng.peo_entry') 行政院全民督工
+    a(ng-href='http://www.road.tcg.gov.tw/ROADRCIS') 台北市道路施工
   li(ng-class="getClass('/view7')")
+    a(ng-href='http://cmdweb.pcc.gov.tw/pccms/pwreport/pccducon_geoeng.peo_entry') 行政院全民督工
+  li(ng-class="getClass('/view8')")
     a(ng-href='http://www.safetaiwan.tw/web2/main.php') 公路總局 Safe Taiwan
