--- a/roadpin-frontend/app/views/partial4.jade
+++ b/roadpin-frontend/app/views/partial4.jade
@@ -9,4 +9,8 @@ div(ng-controller="MapCtrl")
     div(ng-class="distVincentyClass()")
       p distance: {{distVincenty}} m
 
+  div#map-legend
+    span(ng-repeat="legend_type in LEGENDS")
+      span(style="background-color: {{LEGEND_COLOR[legend_type]}}; color: white;") {{LEGEND_STRING[legend_type]}}
+      span(style="background-color: white; padding:2px;")
   div.map-canvas(ui-map="myMap", ui-options="mapOptions", ui-event="{'map-idle' : 'onMapIdle()', 'map-click': 'onMapClick($event, $params)', 'map-zoom_changed': 'onMapZoomChanged(myMap.getZoom())'}")
