--- a/roadpin-frontend/app/index.jade
+++ b/roadpin-frontend/app/index.jade
@@ -58,5 +58,6 @@ html(lang='en', ng-controller='AppCtrl')
     script(src="/js/angular-ui-utils/ui-utils.js")
     script(src='/js/angular-ui-map/ui-map.js')
     script(src='/js/angular-ui-bootstrap-bower/ui-bootstrap-tpls.min.js')
+    script(src='/js/production.js')
     script(src='/js/app.js')
     script(src='https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&callback=onGoogleReady')
