1. add thb forum. 2. frontend add click info window

--- a/roadpin-frontend/app/views/nav.jade
+++ b/roadpin-frontend/app/views/nav.jade
@@ -14,4 +14,6 @@ ul.nav
   li(ng-class="getClass('/view7')")
     a(ng-href='http://cmdweb.pcc.gov.tw/pccms/pwreport/pccducon_geoeng.peo_entry') 行政院全民督工
   li(ng-class="getClass('/view8')")
-    a(ng-href='http://www.safetaiwan.tw/web2/main.php') 公路總局 Safe Taiwan
+    a(ng-href='http://www.thb.gov.tw/TM/Menus/Forums/Forums_List.aspx?forums=5') 公路總局路平建議區
+  li(ng-class="getClass('/view9')")
+    a(ng-href='http://www.safetaiwan.tw/web2/main.php') 公路總局 SafeTaiwan
