--- a/roadpin-frontend/app/views/partial4.jade
+++ b/roadpin-frontend/app/views/partial4.jade
@@ -2,7 +2,7 @@ div(ng-controller="MapCtrl")
   div.states
     button.btn.btn-primary(type=button, ng-model="states.isDistVincenty", btn-checkbox, btn-checkbox-true="'yes'", btn-checkbox-false="'no'")
       div 
-        p Distance by Vincenty's Formula: {{states.isDistVincenty}} 
+        p 估測距離: {{states.isDistVincenty}} 
     button.btn.btn-primary(type=button, ng-model="dummy", ng-click="onClearDistList()", btn-checkbox, btn-checkbox-true="'yes'", btn-checkbox-false="'no'")
       div 
         p Clear
