--- a/roadpin-frontend/app/views/nav.jade
+++ b/roadpin-frontend/app/views/nav.jade
@@ -10,10 +10,12 @@ ul.nav
   li(ng-class="getClass('/view5')")
     a(ng-href='#/view5') Report
   li(ng-class="getClass('/view6')")
-    a(ng-href='http://www.road.tcg.gov.tw/ROADRCIS') 台北市道路施工
+    a(ng-href='#/view6') 所有的情形
   li(ng-class="getClass('/view7')")
-    a(ng-href='http://cmdweb.pcc.gov.tw/pccms/pwreport/pccducon_geoeng.peo_entry') 行政院全民督工
+    a(ng-href='http://www.road.tcg.gov.tw/ROADRCIS') 台北市道路施工
   li(ng-class="getClass('/view8')")
-    a(ng-href='http://www.thb.gov.tw/TM/Menus/Forums/Forums_List.aspx?forums=5') 公路總局路平建議區
+    a(ng-href='http://cmdweb.pcc.gov.tw/pccms/pwreport/pccducon_geoeng.peo_entry') 行政院全民督工
   li(ng-class="getClass('/view9')")
+    a(ng-href='http://www.thb.gov.tw/TM/Menus/Forums/Forums_List.aspx?forums=5') 公路總局路平建議區
+  li(ng-class="getClass('/view10')")
     a(ng-href='http://www.safetaiwan.tw/web2/main.php') 公路總局 SafeTaiwan
