remove Report and all temporarily

--- a/roadpin-frontend/app/views/nav.jade
+++ b/roadpin-frontend/app/views/nav.jade
@@ -7,10 +7,10 @@ ul.nav
     a(ng-href='#/view3') 今天的情形
   li(ng-class="getClass('/view4')")
     a(ng-href='#/view4') 今天的情形 (Google Map)
-  li(ng-class="getClass('/view5')")
-    a(ng-href='#/view5') Report
-  li(ng-class="getClass('/view6')")
-    a(ng-href='#/view6') 所有的情形
+  //li(ng-class="getClass('/view5')")
+  //  a(ng-href='#/view5') Report
+  //li(ng-class="getClass('/view6')")
+  //  a(ng-href='#/view6') 所有的情形
   li(ng-class="getClass('/view7')")
     a(ng-href='http://www.road.tcg.gov.tw/ROADRCIS') 台北市道路施工
   li(ng-class="getClass('/view8')")
